feat: support postgres find. join route3, where exists